GreyBlue.css: fix alignment of radio-button description

--- a/tuxbox/neutrino/daemons/nhttpd/web/styles/Y_Dist-GreyBlue.css
+++ b/tuxbox/neutrino/daemons/nhttpd/web/styles/Y_Dist-GreyBlue.css
@@ -63,7 +63,6 @@ button:hover,input[type="button"]:hover,input[type="submit"]:hover,input[type="f
 }
 
 input {
-	height: 22px;
 	border: 1px solid #444444;
 	background-color: #303030;
 	border-radius: 3px;
